tests/baselines/reference/emptyGenericParamList.errors.txt
==== tests/cases/compiler/emptyGenericParamList.ts (2 errors) ====
    class I<T> {}
    var x: I<>;
            ~~
!!! error TS1099: Type argument list cannot be empty.
           ~~~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).